--- a/app/src/main/res/layout/include_recycler_time.xml
+++ b/app/src/main/res/layout/include_recycler_time.xml
@@ -17,6 +17,9 @@
             android:id="@+id/tv_alarm_title"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            android:gravity="center_vertical"
             app:layout_constraintHeight_percent="0.3"
             app:layout_constraintLeft_toRightOf="@id/space_left"
             app:layout_constraintRight_toRightOf="parent"
