--- a/app/src/main/res/layout/recycler_date.xml
+++ b/app/src/main/res/layout/recycler_date.xml
@@ -1,16 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="100dp"
+        app:cardCornerRadius="25dp"
+        app:cardElevation="50dp">
 
-        <include
-            android:id="@+id/alarm_time"
-            layout="@layout/include_recycler_time"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:layout_constraintLeft_toLeftOf="parent"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="100dp">
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <include
+                android:id="@+id/alarm_time"
+                layout="@layout/include_recycler_time"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toLeftOf="@id/tv_alarm_date" />
+
+            <TextView
+                android:id="@+id/tv_alarm_date"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                app:layout_constraintRight_toLeftOf="@id/switch_alarm" />
+
+            <androidx.appcompat.widget.SwitchCompat
+                android:id="@+id/switch_alarm"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:layout_constraintRight_toRightOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
 </layout>
