--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,10 @@
             name="viewModel"
             type="kr.ryan.alarm.viewmodel.AlarmViewModel" />
 
+        <variable
+            name="activity"
+            type="kr.ryan.alarm.ui.activity.MainActivity" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -51,6 +55,23 @@
             app:layout_constraintTop_toBottomOf="@id/card_alarm_time"
             app:layout_constraintBottom_toTopOf="@id/recycler_alarm"
             app:layout_constraintWidth_percent="0.85">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/iv_add"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/add"
+                    android:scaleType="fitCenter"
+                    android:onClick="@{() -> activity.showAlarmAddDialogFragment()}"
+                    app:layout_constraintDimensionRatio="1"
+                    app:layout_constraintRight_toRightOf="parent"
+                    android:contentDescription="@string/alarm_add" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.cardview.widget.CardView>
 
