--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="kr.ryan.alarm.viewmodel.AlarmViewModel" />
@@ -25,7 +26,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:cardElevation="30dp"
-            app:layout_constraintBottom_toTopOf="@id/card_alarm_settings"
+            app:layout_constraintBottom_toTopOf="@id/alarm_setting"
             app:layout_constraintHeight_percent="0.25"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
@@ -37,55 +38,49 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:text="@{viewModel.alarmStatus}"
                 android:maxLines="1"
+                android:text="@{viewModel.alarmStatus}"
                 android:textSize="45dp"
                 android:textStyle="bold" />
 
         </androidx.cardview.widget.CardView>
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_alarm_settings"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/alarm_setting"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:cardElevation="30dp"
+            app:layout_constraintBottom_toTopOf="@id/recycler_alarm"
             app:layout_constraintHeight_percent="0.1"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/card_alarm_time"
-            app:layout_constraintBottom_toTopOf="@id/recycler_alarm"
             app:layout_constraintWidth_percent="0.85">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <ImageView
+                android:id="@+id/iv_add"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:contentDescription="@string/alarm_add"
+                android:onClick="@{() -> activity.showAlarmAddDialogFragment()}"
+                android:scaleType="fitCenter"
+                android:src="@drawable/add"
+                app:layout_constraintDimensionRatio="1"
+                app:layout_constraintRight_toRightOf="parent" />
 
-                <ImageView
-                    android:id="@+id/iv_add"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/add"
-                    android:scaleType="fitCenter"
-                    android:onClick="@{() -> activity.showAlarmAddDialogFragment()}"
-                    app:layout_constraintDimensionRatio="1"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:contentDescription="@string/alarm_add" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </androidx.cardview.widget.CardView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_alarm"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:orientation="vertical"
-            app:layout_constraintHeight_percent="0.55"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_percent="0.55"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/card_alarm_settings"
+            app:layout_constraintTop_toBottomOf="@id/alarm_setting"
             app:layout_constraintWidth_percent="0.85" />
 
 
