--- a/app/src/main/res/layout/fragment_alarm_dialog.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog.xml
@@ -13,6 +13,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TimePicker
+            android:id="@+id/dp_select"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:timePickerMode="spinner"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+
+
+
         <Button
             android:id="@+id/btn_add"
             android:text="@string/add"
@@ -23,7 +33,7 @@
             android:layout_height="0dp"
             android:onClick="@{() -> fragment.add()}"
             app:layout_constraintWidth_percent="0.45"
-            app:layout_constraintHeight_percent="0.2"
+            app:layout_constraintHeight_percent="0.15"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -37,7 +47,7 @@
             android:layout_height="0dp"
             android:onClick="@{() -> fragment.cancel()}"
             app:layout_constraintWidth_percent="0.45"
-            app:layout_constraintHeight_percent="0.2"
+            app:layout_constraintHeight_percent="0.15"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
