--- a/app/src/main/res/layout/fragment_alarm_dialog.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog.xml
@@ -21,35 +21,51 @@
             app:layout_constraintTop_toTopOf="parent"/>
 
 
-
-
-        <Button
-            android:id="@+id/btn_add"
-            android:text="@string/add"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:gravity="center"
-            android:layout_width="0dp"
+        <com.google.android.material.card.MaterialCardView
+            android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:onClick="@{() -> fragment.add()}"
-            app:layout_constraintWidth_percent="0.45"
-            app:layout_constraintHeight_percent="0.15"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            style="@style/CustomCardView"
+            app:cardElevation="50dp"
+            app:layout_constraintHeight_percent="0.6"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-        <Button
-            android:id="@+id/btn_cancel"
-            android:text="@string/cancel"
-            android:textStyle="bold"
-            android:textSize="18dp"
-            android:gravity="center"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:onClick="@{() -> fragment.cancel()}"
-            app:layout_constraintWidth_percent="0.45"
-            app:layout_constraintHeight_percent="0.15"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+
+                <Button
+                    android:id="@+id/btn_add"
+                    android:text="@string/add"
+                    android:textStyle="bold"
+                    android:textSize="18dp"
+                    android:gravity="center"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:onClick="@{() -> fragment.add()}"
+                    app:layout_constraintWidth_percent="0.45"
+                    app:layout_constraintHeight_percent="0.15"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+                <Button
+                    android:id="@+id/btn_cancel"
+                    android:text="@string/cancel"
+                    android:textStyle="bold"
+                    android:textSize="18dp"
+                    android:gravity="center"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:onClick="@{() -> fragment.cancel()}"
+                    app:layout_constraintWidth_percent="0.45"
+                    app:layout_constraintHeight_percent="0.15"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
