[add] red, blue color days(일,월,화,수,목,금,토) string calendar icon 카드뷰안에 선택된 날, 이미지, 알람이름입력란 추가(요일 선택란 추가예정)
[modify]
알람 다이얼로그에 버튼 카드뷰밖으로이동

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="deep_orange_200">#FFAB91</color>
     <color name="deep_orange_700">#E64A19</color>
 
+    <color name="red">#FF0000</color>
+    <color name="blue">#0064FF</color>
+
 </resources>
