--- a/app/src/main/res/layout/fragment_alarm_dialog.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="fragment"
             type="kr.ryan.alarm.ui.dialog.AlarmDialogFragment" />
@@ -14,59 +16,105 @@
         android:layout_height="match_parent">
 
         <TimePicker
-            android:id="@+id/dp_select"
+            android:id="@+id/tp_select"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:timePickerMode="spinner"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/space_middle"/>
+
+        <Space
+            android:id="@+id/space_middle"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/tp_select"
+            app:layout_constraintBottom_toTopOf="@id/card_alarm_setting"
+            app:layout_constraintHeight_percent="0.1"/>
 
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/card_alarm_setting"
+            style="@style/CustomCardView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            style="@style/CustomCardView"
             app:cardElevation="50dp"
-            app:layout_constraintHeight_percent="0.6"
-            app:layout_constraintBottom_toBottomOf="parent">
+            app:layout_constraintBottom_toTopOf="@id/btn_add"
+            app:layout_constraintTop_toBottomOf="@id/space_middle">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-
-                <Button
-                    android:id="@+id/btn_add"
-                    android:text="@string/add"
-                    android:textStyle="bold"
-                    android:textSize="18dp"
-                    android:gravity="center"
+                <TextView
+                    android:id="@+id/tv_selected_date"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:onClick="@{() -> fragment.add()}"
-                    app:layout_constraintWidth_percent="0.45"
-                    app:layout_constraintHeight_percent="0.15"
+                    android:gravity="center_vertical"
+                    android:textSize="16dp"
+                    android:textStyle="bold"
+                    app:layout_constraintHeight_percent="0.2"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintRight_toLeftOf="@id/iv_calendar"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                <Button
-                    android:id="@+id/btn_cancel"
-                    android:text="@string/cancel"
-                    android:textStyle="bold"
-                    android:textSize="18dp"
-                    android:gravity="center"
+                <ImageView
+                    android:id="@+id/iv_calendar"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
-                    android:onClick="@{() -> fragment.cancel()}"
-                    app:layout_constraintWidth_percent="0.45"
-                    app:layout_constraintHeight_percent="0.15"
+                    android:contentDescription="@string/calendar"
+                    android:src="@drawable/calendar"
+                    app:layout_constraintDimensionRatio="1"
+                    app:layout_constraintHeight_percent="0.2"
                     app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <EditText
+                    app:layout_constraintTop_toBottomOf="@id/tv_selected_date"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+
+                    app:layout_constraintHeight_percent="0.15"
+                    android:importantForAutofill="no"
+                    android:inputType="text" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.card.MaterialCardView>
 
+        <Button
+            android:id="@+id/btn_add"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:onClick="@{() -> fragment.add()}"
+            android:text="@string/add"
+            android:textSize="18dp"
+            android:textStyle="bold"
 
+            android:background="@color/white"
+            android:textColor="@color/black"
+            app:backgroundTint="@null"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintWidth_percent="0.45" />
+
+        <Button
+            android:id="@+id/btn_cancel"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:gravity="center"
+            android:onClick="@{() -> fragment.cancel()}"
+            android:text="@string/cancel"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:background="@color/white"
+            android:textColor="@color/black"
+            app:backgroundTint="@null"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintWidth_percent="0.45" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
