--- a/app/src/main/res/layout/fragment_alarm_dialog.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -9,6 +8,7 @@
         <variable
             name="fragment"
             type="kr.ryan.alarm.ui.dialog.AlarmDialogFragment" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,16 +20,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:timePickerMode="spinner"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/space_middle"/>
+            app:layout_constraintBottom_toTopOf="@id/space_middle"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Space
             android:id="@+id/space_middle"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/tp_select"
             app:layout_constraintBottom_toTopOf="@id/card_alarm_setting"
-            app:layout_constraintHeight_percent="0.1"/>
+            app:layout_constraintHeight_percent="0.1"
+            app:layout_constraintTop_toBottomOf="@id/tp_select" />
 
 
         <com.google.android.material.card.MaterialCardView
@@ -68,14 +68,27 @@
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <EditText
-                    app:layout_constraintTop_toBottomOf="@id/tv_selected_date"
+                <include
+                    android:id="@+id/include_days"
+                    layout="@layout/include_alarm_add_days"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_marginTop="10dp"
+                    app:layout_constraintHeight_percent="0.2"
+                    app:layout_constraintTop_toBottomOf="@id/iv_calendar" />
 
-                    app:layout_constraintHeight_percent="0.15"
+                <EditText
+                    android:id="@+id/et_alarm_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginTop="10dp"
+                    android:gravity="center_vertical"
+                    android:hint="@string/alarm_name"
                     android:importantForAutofill="no"
-                    android:inputType="text" />
+                    android:inputType="text"
+                    android:maxLines="1"
+                    app:layout_constraintHeight_percent="0.2"
+                    app:layout_constraintTop_toBottomOf="@id/include_days" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -85,14 +98,14 @@
             android:id="@+id/btn_add"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/white"
             android:gravity="center"
             android:onClick="@{() -> fragment.add()}"
             android:text="@string/add"
+            android:textColor="@color/black"
+
             android:textSize="18dp"
             android:textStyle="bold"
-
-            android:background="@color/white"
-            android:textColor="@color/black"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHeight_percent="0.1"
@@ -103,13 +116,13 @@
             android:id="@+id/btn_cancel"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:background="@color/white"
             android:gravity="center"
             android:onClick="@{() -> fragment.cancel()}"
             android:text="@string/cancel"
+            android:textColor="@color/black"
             android:textSize="18dp"
             android:textStyle="bold"
-            android:background="@color/white"
-            android:textColor="@color/black"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHeight_percent="0.1"
