--- a/app/src/main/res/layout/fragment_alarm_dialog.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="fragment"
-            type="kr.ryan.alarm.ui.dialog.AlarmDialogFragment" />
+            type="kr.ryan.alarm.ui.dialog.AlarmRegisterDialogFragment" />
 
     </data>
 
