[add] Date to String 선택한 요일 텍스트뷰에 표기(선택하지않은경우 출력도 정해야함!) [modify] 선택한 요일 먼저 소트한후 스트링으로 변환

--- a/app/src/main/res/layout/fragment_alarm_dialog.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog.xml
@@ -9,6 +9,10 @@
             name="fragment"
             type="kr.ryan.alarm.ui.dialog.AlarmRegisterDialogFragment" />
 
+        <variable
+            name="viewModel"
+            type="kr.ryan.alarm.viewmodel.AlarmRegisterViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -52,6 +56,7 @@
                     android:gravity="center_vertical"
                     android:textSize="16dp"
                     android:textStyle="bold"
+                    android:text="@{viewModel.selectedShowDays}"
                     app:layout_constraintHeight_percent="0.2"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toLeftOf="@id/iv_calendar"
