[add] Calendar icon 클릭시 작동하는 다이얼로그 구성
[modify]
안쓰는 임포트 삭제
컨벤션 지키기위해 정렬이용

--- a/app/src/main/res/layout/fragment_alarm_dialog.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog.xml
@@ -68,6 +68,7 @@
                     android:layout_height="0dp"
                     android:contentDescription="@string/calendar"
                     android:src="@drawable/calendar"
+                    android:onClick="@{() -> viewModel.calendarIconClick()}"
                     app:layout_constraintDimensionRatio="1"
                     app:layout_constraintHeight_percent="0.2"
                     app:layout_constraintRight_toRightOf="parent"
