--- a/app/src/main/res/layout/fragment_calendar_dialog.xml
+++ b/app/src/main/res/layout/fragment_calendar_dialog.xml
@@ -6,10 +6,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <CalendarView
-            android:id="@+id/calendar"
+        <DatePicker
+            android:id="@+id/dt_calendar"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:datePickerMode="calendar"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_add"/>
 
