[modify] date picker -> calendar view 화면가득 차지않는 현상을 수정하기위해서 캘린더뷰로 다시변경 최소날짜 세팅(오늘 이전의 날짜는 선택 불가능) 다이얼로그 아래에 생성되도록 변경

--- a/app/src/main/res/layout/fragment_calendar_dialog.xml
+++ b/app/src/main/res/layout/fragment_calendar_dialog.xml
@@ -6,11 +6,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <DatePicker
-            android:id="@+id/dt_calendar"
+        <CalendarView
+            android:id="@+id/calendar"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:datePickerMode="calendar"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_add"/>
 
