[modify] Time Picker 부분 BindingAdapter로 처리 higher order function 과 viewModel에서 처리 사용하지않는 임포트 제거
[할일]
alarm register viewModel 전체적인 수정 - 날짜선택 및 요일선택

--- a/app/src/main/res/layout/fragment_alarm_dialog.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog.xml
@@ -24,6 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:timePickerMode="spinner"
+            onTimePickerClick="@{viewModel.changeTime}"
             app:layout_constraintBottom_toTopOf="@id/space_middle"
             app:layout_constraintTop_toTopOf="parent" />
 
