--- a/app/src/main/res/layout/fragment_calendar_dialog.xml
+++ b/app/src/main/res/layout/fragment_calendar_dialog.xml
@@ -16,7 +16,7 @@
             android:id="@+id/calendar"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            CalendarDateClick="@{viewModel.calendarDateClick}"
+            onCalendarDateClick="@{viewModel.calendarDateClick}"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/btn_add"/>
 
@@ -30,6 +30,7 @@
             android:textColor="@color/black"
             android:textSize="18dp"
             android:textStyle="bold"
+            android:onClick="@{() -> viewModel.cancelBtnClick()}"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHeight_percent="0.1"
@@ -46,6 +47,7 @@
             android:textColor="@color/black"
             android:textSize="18dp"
             android:textStyle="bold"
+            android:onClick="@{() -> viewModel.addBtnClick()}"
             app:backgroundTint="@null"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHeight_percent="0.1"
