[add] 알람 저장 상태 enum 클래스 생성(init, cancel, register) title 저장할 프로퍼티 생성 room 에 저장하는 메소드 생성 - 확인필요
[modify]
fragment 에서 클릭메소드를 생성해주었던거 viewModel 로 이동

--- a/app/src/main/res/layout/fragment_alarm_dialog.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog.xml
@@ -107,7 +107,7 @@
             android:layout_height="0dp"
             android:background="@color/white"
             android:gravity="center"
-            android:onClick="@{() -> fragment.add()}"
+            android:onClick="@{() -> viewModel.cancelAlarm()}"
             android:text="@string/cancel"
             android:textColor="@color/black"
             android:textSize="18dp"
@@ -124,7 +124,7 @@
             android:layout_height="0dp"
             android:background="@color/white"
             android:gravity="center"
-            android:onClick="@{() -> fragment.cancel()}"
+            android:onClick="@{() -> viewModel.registerAlarm()}"
             android:text="@string/add"
             android:textColor="@color/black"
             android:textSize="18dp"
