--- a/app/src/main/res/layout/recycler_date.xml
+++ b/app/src/main/res/layout/recycler_date.xml
@@ -2,6 +2,17 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <data>
+
+        <variable
+            name="alarmDate"
+            type="String" />
+
+        <variable
+            name="alarmStatus"
+            type="Boolean" />
+    </data>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="100dp"
@@ -18,21 +29,24 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/tv_alarm_date" />
+                app:layout_constraintWidth_percent="0.4"/>
 
             <TextView
                 android:id="@+id/tv_alarm_date"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:textSize="25dp"
+                android:gravity="center_vertical|end"
+                android:text="@{alarmDate}"
+                android:textSize="15dp"
                 android:textStyle="bold"
+                app:layout_constraintWidth_percent="0.45"
                 app:layout_constraintRight_toLeftOf="@id/switch_alarm" />
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/switch_alarm"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
+                android:checked="@{alarmStatus}"
                 app:layout_constraintRight_toRightOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
