flow 변경완료 날짜표시부분 필요함!

--- a/app/src/main/res/layout/fragment_alarm_dialog.xml
+++ b/app/src/main/res/layout/fragment_alarm_dialog.xml
@@ -57,7 +57,6 @@
                     android:gravity="center_vertical"
                     android:textSize="16dp"
                     android:textStyle="bold"
-                    android:text="@{viewModel.selectedDay == null ? viewModel.selectedDate : (viewModel.selectedDay.empty ? viewModel.selectedDate : viewModel.showSelectedDay)}"
                     app:layout_constraintHeight_percent="0.2"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintRight_toLeftOf="@id/iv_calendar"
@@ -69,7 +68,6 @@
                     android:layout_height="0dp"
                     android:contentDescription="@string/calendar"
                     android:src="@drawable/calendar"
-                    android:onClick="@{() -> viewModel.calendarClick()}"
                     app:layout_constraintDimensionRatio="1"
                     app:layout_constraintHeight_percent="0.2"
                     app:layout_constraintRight_toRightOf="parent"
@@ -107,7 +105,7 @@
             android:layout_height="0dp"
             android:background="@color/white"
             android:gravity="center"
-            android:onClick="@{() -> viewModel.cancelAlarm()}"
+            android:onClick="@{() -> viewModel.onClickCancelAlarm()}"
             android:text="@string/cancel"
             android:textColor="@color/black"
             android:textSize="18dp"
@@ -124,7 +122,7 @@
             android:layout_height="0dp"
             android:background="@color/white"
             android:gravity="center"
-            android:onClick="@{() -> viewModel.registerAlarm()}"
+            android:onClick="@{() -> viewModel.onClickInsertAlarm()}"
             android:text="@string/add"
             android:textColor="@color/black"
             android:textSize="18dp"
