--- a/refc/app/src/main/res/layout/recycler_days.xml
+++ b/refc/app/src/main/res/layout/recycler_days.xml
@@ -2,6 +2,7 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/purple_700"
         android:layout_width="match_parent"
         android:layout_height="150dp">
 
