--- a/refc/app/src/main/res/layout/activity_main.xml
+++ b/refc/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/main_toolbar"
+            android:background="?attr/colorPrimary"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintHeight_percent="0.1"
@@ -25,15 +26,17 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:background="@color/cyan_200"
+            android:elevation="15dp"
             android:gravity="center"
             android:maxLines="1"
             android:textColor="@color/white"
             android:textSize="25sp"
             android:textStyle="bold"
-            app:layout_constraintHeight_percent="0.3"
+            app:layout_constraintHeight_percent="0.2"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/main_toolbar"
+            app:layout_constraintBottom_toTopOf="@id/iv_more"
             app:layout_constraintWidth_percent="0.9" />
 
         <ImageView
@@ -59,19 +62,24 @@
             app:layout_constraintBottom_toTopOf="@id/recycler_alarm"
             app:layout_constraintDimensionRatio="1"
             app:layout_constraintHeight_percent="0.1"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintRight_toRightOf="@id/tv_remain_time"
             app:layout_constraintTop_toBottomOf="@id/tv_remain_time" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_alarm"
             dividerColor="@{@color/gray_400}"
             dividerHeight="@{5f}"
-            android:layout_width="match_parent"
+            android:background="@color/cyan_200"
+            android:layout_width="0dp"
             android:layout_height="0dp"
             android:orientation="vertical"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/iv_more" />
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_more"
+            app:layout_constraintHeight_percent="0.5"
+            app:layout_constraintWidth_percent="0.9" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
