--- a/refc/app/src/main/res/values/colors.xml
+++ b/refc/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
+    <color name="purple_500">#FF6200EE</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="gray_400">#BDBDBD</color>
@@ -16,5 +16,7 @@
     <color name="cyan_700">#FF0097A7</color>
     <color name="orange_200">#FFFFCC80</color>
     <color name="orange_700">#FFF57C00</color>
-    
+
+    <color name="blue">#0064FF</color>
+    <color name="red">#FF0000</color>
 </resources>
